--- a/src/views/healthCollectiveForm.ejs
+++ b/src/views/healthCollectiveForm.ejs
@@ -26,7 +26,7 @@
                     <h5>Colectivo Salud</h5>
                 </div>
                 <div class="ibox-content">
-                    <div id="form" class="wizard-big wizard-health">
+                    <div id="form-health-collective" class="wizard-big wizard-health">
                         <h1><i class="fa fa-window-maximize"></i> Colectivo</h1>
                         <fieldset>
                             <form id="policy-form" action="/sistema/add-health-collective" method="POST">
@@ -56,7 +56,7 @@
                                                         id="id_rif_tomador"
                                                         onkeyup="pasarNombreTomador2();"
                                                         placeholder="Cédula/Rif *" 
-                                                        class="form-control"
+                                                        class="form-control number_format"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
